사이간격 조정

--- a/portfolio.css
+++ b/portfolio.css
@@ -210,7 +210,7 @@ a:link {text-decoration: none; color: black;}
 body { margin: 0; } 
 
 div#main_slider { 
-    width: 60vw;
+    width: 59.7vw;
     height: auto;
     overflow: hidden;
     float: left;
@@ -236,19 +236,26 @@ div#main_slider figure img { width: 25%; float: left; }
 .others{
     position: relative;
     right: 0;
-    width: 30vw;
+    width: 29.5vw;
     height: auto;
     display: flex;
+    padding-bottom: 0.5vh;
 }
 .the_others{
     max-width: 100%;
 }
 .bottom{
-    padding-top: 24.3vh;
+    padding-top: 25.1vh;
     margin-left: 5vw;
     width: 90vw;
     display: flex;
     justify-content: space-between;
 }
-
+.figure{
+    width: 29.5vw;
+}
+.figure_1{
+    position: absolute;
+    right: 0;
+}
   
