nav 아이콘 위치 조정

--- a/portfolio.css
+++ b/portfolio.css
@@ -300,6 +300,7 @@ div#main_slider figure img { width: 25%; float: left;}
     }
     #menu-icon{
         position: absolute;
+        top: 3vh;
         right: 10vw;
         display: inline-block;
     }
