--- a/portfolio.css
+++ b/portfolio.css
@@ -1,8 +1,4 @@
-/*#main_page_body{*/
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-/*    overflow-x: hidden;*/
-}
+
 #main_page_body{
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
@@ -276,10 +272,10 @@ div#main_slider figure img { width: 25%; float: left;}
 }
   /*------------------MEDIA!!!!----------------------*/
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 768px) {
    
     #main_page_body{
-    overflow-y: visible;
+/*    overflow-y: visible;*/
     }
     #home_logo{
         position: absolute;
@@ -306,7 +302,7 @@ div#main_slider figure img { width: 25%; float: left;}
         z-index: 100;
     }
     nav{
-        display: inline-block;
+        display:block;
         width: 15vw;
         padding-top: 3vh;
         height: 5vh;
@@ -330,7 +326,9 @@ div#main_slider figure img { width: 25%; float: left;}
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        padding: 3vh;
+        padding-top:  5vh;
+        padding-left: 3vh;
+        
         
     }
     nav ul li {
