--- a/portfolio.css
+++ b/portfolio.css
@@ -358,6 +358,7 @@ div#main_slider figure img { width: 25%; float: left;}
         margin-right: 12vw;
     }
     #slider{
+        overflow-x: hidden;
         position: absolute;
         flex-direction: column;
         align-items: center;
