--- a/portfolio.css
+++ b/portfolio.css
@@ -1,377 +1,159 @@
+@charset "utf-8";
 
-#main_page_body{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    overflow-y: hidden;
-}
-#description_page_body{
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    overflow-x: hidden;
-}
-.container{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-    max-width: inherit;
-/*    background-color: bisque;*/
-}
-header{
-    align-items: center;
-    height: 10vh;
-    display: flex;
-    left: 5vw;
-    position: fixed;
-    width: 100vw;
-    
-/*    align-items: center;*/
-/*    background-color: bisque;*/
-/*    border-bottom: 1px solid gray;*/    
-}
-#home_logo{
-/*    background-color: aquamarine;*/
-/*    border-bottom: 1px solid gray;*/
-    width: 170px;
-}
-header ul{
-    display: flex;
-    justify-content: flex-end;
-    list-style: none;
-    flex-direction: row;
-    width: inherit;
-    padding-right: 5vw;
-/*    margin-right: 10vw;*/
-    
-    
-}
-#menu-icon{
-    display: none;
-    width: 38px;
-    height: 38px;
-    background: url(image/nav_1.png) center;
-    
-}
-a:hover#menu-icon{
-    border-radius:4px 4px 0 0;
-}
-header ul li{
-    font-size: 0.8rem;
-    font-weight: 300;
-    color: #000;
-    text-decoration: none;
-    position: relative;
-    text-align: right;
-    margin-right: 5vw;
-}
-.contants{
-    display: flex;
-    flex-direction: column;
-    height: 90vh;
-    margin-top: 20px;
-}
-nav{
-/*    background-color: aqua;*/
-      overflow: hidden;
-      position: fixed;
-      width: 95vw;
-      top: 15vh;
-      border-bottom: 1px solid gray;
-}
-nav ul{
-    list-style: none;
-    display: flex;
-    padding: 0;
-    justify-content: space-between;
-}
-nav ul li{
-    list-style: none;
-    
-}
-nav ul li a{
-    font-size: 0.7rem;
-    font-weight: 500;
-    text-decoration: none;
-/*    background-color: aqua;*/
-}
-footer{
-    display: block;
-    text-align: left;
-/*    background-color: tomato;*/
-    height: 5vh;
-    width: auto;
-    margin-left: 5%;
-    bottom: 3%;
-    position: fixed;
-    font-size: 0.8rem;
-    font-weight: 300;
-}
+/* reset.css */
+html, body, div, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, address, dl, dt, dd, ol, ul, li, fieldset, form, legend, table, caption, tbody, tfoot, thead, tr, th, td, input, select, textarea{margin:0; padding:0;}
+h1, h2, h3, h4, h5, h6{font-size:100%;}
+img, fieldset{border:0px;}
+table{border-collapse:collapse;}
+ul, ol, li{list-style:none;}
+address, em{font-style:normal;}
+li img, object{vertical-align:top;}
+input, select, textarea, form img{vertical-align:middle;}
+a{ outline:0; text-decoration:none; border:none;}
+body { font: 14px /1.2 "Roboto",sans-serif;, color:#666;   }
 
-#slider {
-    position:relative;
-/*    height: 53vh;*/
-    padding-top: 26vh;
-    display: flex;
-    padding-left: 5vw;
-    top: 0;
-}
-#slider_main {
-    position:relative;
-/*    height: 53vh;*/
-    padding-top: 26vh;
-    display: flex;
-    padding-left: 5vw;
-    top: 0;
-}
-.description{
-    padding-top: 26vh;
-    padding-left: 5vw;
-}
-#slider_shoerepair {
-/*    height: 53vh;*/
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding-right: 5vw;
-    top: 0;
-}
-a:link {text-decoration: none; color: black;}
+/*----------------------------------------------------------*/
 
-.item{
-    height: 45vh;
-    padding-right: 0.5%;
-    width: auto;
-}
-.item_secondpage{
-    height: 57vh;
-/*    padding-right: 0.5%;*/
-    width: auto;
-    padding-bottom: 2vh;
-}
-.shoerepair{
-    margin-right: 3vw;
-}
-.aboutcontent{
-    padding-top: 5vh;
-    position: fixed;
-    display: flex;
-    flex-direction: column;    
-}
+/*---------layout-------------*/
+#header{height: 10vh;display: flex; top: 3vh;margin-left: 5vw; position: fixed; width: 90vw; /*background-color: bisque;*/  justify-content: space-between;}
+#home_logo{display: block; width: 170px; height: 28px;}
+#menu{ display: flex;}
+#menu li{margin-left: 30px;}
+#menu li a{font-size: 0.8rem; font-weight:300; }
 
-#description_subtitle{
-    font-size: 1.2rem;
-    font-weight: 100;
-/*    background-color: aquamarine;*/
-    
-}
-#description_title{
-    font-weight: 500;
-    font-size: 3rem;
-/*    background-color: aquamarine;*/
-    margin-top: -1vh;
-    
-}
-#description_text{
-    margin-top: 0;    
-    line-height: 1.8rem;
-    font-size: 1.1rem;
-    font-weight: 300;
-    width: 32vw;
-/*    background-color: aquamarine;*/
-/*    opacity: 0.7;*/
-}
-#year{
-    font-size: 1rem;
-    font-weight: 300;
-    padding: 1vh;
-    border-bottom: 0.5px dotted gray;
-}
-.title{
-    margin-top: 2%;
-    font-size: 1.0rem;
-    font-weight: 500;   
-}
-.subtitle{
-/*    background-color: aqua;*/
-    font-size: 0.8rem;
-    font-weight: 300;
-    margin-top: -10px;    
-}
 
-#main_slider {
-    
-}
-@keyframes slidy {
-0% { left: 0%; }
-30% { left: 0%; }
-35% { left: -100%; }
-62.5% { left: -100%; }
-67.5% { left: -200%; }
-95% { left: -200%; }
-100% { left: -300%; }
-}
+#nav{/*background-color: aqua; */overflow: hidden; position: fixed; width: 90vw; top: 13vh; border-bottom: 1px solid gray; padding-bottom: 2vh;}
+#nav ul{ display: flex; justify-content: space-between; font-size: 0.9rem; font-weight: 500;}
+#nav ul li a:hover{color:red;}
 
-body { margin: 0; } 
 
-div#main_slider { 
-    width: 59.7vw;
-    height: auto;
-    overflow: hidden;
-    float: left;
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
-}
+#footer{ text-align: left; height: 5vh; margin-left: 5vw; position: fixed; bottom: 4vh; font-size: 0.8rem; font-weight: 300;/* background-color: tomato;*/ }
 
-div#main_slider figure { 
-  position: relative;
-  width: 400%;
-  margin: 0;
-  animation: 24s slidy infinite; 
-}
-div#main_slider figure img { width: 25%; float: left;}
 
-.wrapper{
-    z-index: -1;
-    position: relative;
-    top: 26vh;
-    max-width: 90vw;
-    height: auto;
-    margin-left: 5vw; 
+#slider {position:relative; height: 60vh; top: 24vh; display: flex; margin-left: 5vw; }
+#slider li a.subtitle{position: relative; top: 5vh; display: block; font-size: 0.9rem;font-weight: 300; width: 100%;}
+h3{ display: inline-block; font-size: 0.9rem; font-weight: 500; float: left;}
+h3>p{display: inline-block;}
+.item{height: 50vh; margin-right: 1.2vw;
+/*    margin-right: 0.5vw;*/
 }
-.others{
-    position: relative;
-    right: 0;
-    width: 29.5vw;
-    height: auto;
-    display: flex;
-    margin-bottom: 1vh;
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
-}
-.the_others{
-    width: 100%;
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
-}
-.bottom{
-    padding-top: 27vh;
-    margin-left: 5vw;
-    width: 90vw;
-    min-height: 18vh;
-    display: flex;
-    justify-content: space-between;
-    
-}
-.figure{ 
-    width: 29.5vw;
-    
-}
-.figure_1{
-    position: absolute;
-    right: 0;
-}
-#menu_2 {
-    display: none;
-}
+/*----------------------------------------------------------------------------------------*/
+
+
+
+
+
+/*------------------상세페이지---------------*/
+.description{ margin-top: 26vh; margin-left: 5vw;}
+#slider_secondpage{display: flex; flex-direction: column; float: right; position: relative; margin-right: 5vw; z-index: -1}
+.item_secondpage{ height: auto; width: 45vw;; margin-bottom: 2vh;}
+.aboutcontent{padding-top: 5vh;position: fixed; display: flex;flex-direction: column; }
+#description_subtitle{font-size: 1.2rem;font-weight: 100;
+/*    background-color: aquamarine;*/}
+#description_title{font-weight: 500;font-size: 3rem;
+/*    background-color: aquamarine;*/ margin-top: -1vh;}
+#description_text{margin-top: 0;    line-height: 1.8rem;font-size: 1.1rem;font-weight: 300;width: 32vw;}
+#year{font-size: 1rem;font-weight: 300;padding: 20px 20px 20px 0; border-bottom: 0.5px dotted gray; margin-bottom: 15px;}
+
+
+
+#menu_icon{display: none; width: 35px; height: 35px;
+background-image: url(image/nav_2.png);}
+#menu_2 {display: none;}
   /*------------------MEDIA!!!!----------------------*/
 
 @media screen and (max-width: 768px) {
    
-    #main_page_body{
+    body{
     overflow-x: hidden;
-    overflow-y: visible;    
-        
+    overflow-y: visible;        
     }
     #home_logo{
         position: absolute;
         top: 3vh;
+        left: 2vh;
     }
-    .aboutcontent{
-        position: inherit;
-        width: 95%;
-    }
-    #description_text{
-        width: 80vw;
-    }
-   
-    .item_secondpage{
+    #header{
+        position: static;
+        top: 0px;
         width: 100%;
-        height: auto;
-    }
-    #menu{
-        display: none;
-    }
-    header{
-        background-color:white;
+        margin: 0 auto;
         position: fixed;
+        background-color:white;
         display:inline-block;
         height: 12vh;
-        z-index: 100;
+        z-index: 1;
     }
-    nav{
+    #menu{display: none;}
+/*
+    #menu{background: rgba(0,0,0,0.5); width: 100%; position: absolute; bottom: 0;}
+    #menu li{margin-left: 0;}
+    #menu li{margin-left:4vw; height: 4vh; line-height: 4vh;}
+    #menu li a:hover{display: block; color: #fff;}
+*/
+    
+    
+    #nav{
+        margin: 0;
         position: static;
         margin-top: 12vh;
         border: 0;
+        width: 100%;
     }
-    #menu-icon{
+    #menu_icon{
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+/*        background-color: red;*/
         position: absolute;
-        top: 3vh;
-        right: 10vw;
+        top: 2vh;
+        right: 5vw;
         display: inline-block;
-    }
+        cursor: pointer;
         
-    nav ul{
-        height: 0;
-        margin: 0;
+    }
+    .description{ margin-top:12vh; overflow: hidden;}
+    #description_subtitle{font-size: 1.2rem;font-weight: 100; line-height: 2;
+/*    background-color: aquamarine;*/}
+    #description_title{font-weight: 500;font-size: 3rem; line-height: 1.5;
+/*    background-color: aquamarine;*/ margin-top: -1vh;}
+    #slider_secondpage{height: auto;}
+    
+    .aboutcontent{top: 12vh;position: inherit;width: 95%;}
+    #description_text{ width: 90vw; font-size: 2.5vh; line-height: 1.4; letter-spacing:1px; text-align:left;}
+   .item_secondpage{width: 100%;height: auto;}
+    
+  
+    
+    #nav ul{height: 0;margin: 0;position: absolute;flex-direction: column;width: 100vw;  overflow: hidden;/* overflow: 히든은 height가 0이됬을때 숨겨줌*/ }
+    #header #nav ul.open{ height: auto;}
+    #nav ul li {
         position: relative;
-        display: block;
-        flex-direction: column;
-        width: 90vw;  
-        background-color:white;
-        background:rgba(255, 255, 255, 0.6);
-    }
-    header nav ul.open{
-        height: auto;
-    }
-    nav ul li {
         margin: 0;
-        padding-top: 1vh;
-        padding-bottom: 1vh;
-        border-top: 1px solid gray;
-        text-align: center;
-        width: 89.5vw;
+        text-align: left;
+        background:rgba(0,0, 0, 0.5);
     }
-    nav ul li a{
-        font-weight: 700;
-        line-height: 0.7rem;
-    }
-    #menu_2{
-    padding-bottom: 10vh;
-    width: 100vw;
-    list-style: none;
-    display: flex;
-    font-size: 0.8rem;
-    font-weight: 300;
-    justify-content: flex-end;
-    padding-left: 0; 
-    margin-left: 0;
-    }
-    #menu_2 li a{
-        margin-right: 12vw;
-    }
-    #slider{
-        overflow-x: hidden;
-        position: absolute;
-        flex-direction: column;
-        align-items: center;
-        width: 92.5vw;    
-
-    }
-    #slider img{
-        max-width: 100%;
-        height: auto;
-    }
-
+    
+    
+     #slider{top: 12vh;height: auto;margin: 0 auto;flex-direction: column; width:92.5vw; }
+    #slider li a.subtitle{position: relative; top:2vh; display: block; font-size: 0.9rem;font-weight: 300; width: 100%;}
+    #slider  li{margin-bottom: 5.5vh;}
+    #slider img{max-width: 100%;height: auto;}
+    
+    
+    
+    #nav ul li a{display: block;margin-left: 4vw;height: 4vh;line-height: 4vh;color: #fff;font-size: 0.7rem;font-weight: 400;}
+    #nav ul li:hover{background:rgba(0,0, 0, 0.8); color: #fff;}
+    
+    
+    
+    #menu_2{ position: relative; margin-right: 4vw; bottom: -14vh;display: flex;justify-content: flex-start;font-size: 0.8rem;font-weight: 300;}
+    #menu_2 li{margin-left:2vh;}
+    
+   
+   
+    #footer{position:relative; bottom: -17vh; margin-left: 3vw; }
 }
-
-
 
 
 
