--- a/portfolio.css
+++ b/portfolio.css
@@ -10,10 +10,15 @@ address, em{font-style:normal;}
 li img, object{vertical-align:top;}
 input, select, textarea, form img{vertical-align:middle;}
 a{ outline:0; text-decoration:none; border:none;}
-body { font: 14px /1.2 "Roboto",sans-serif;, color:#666;   }
+body { font: 14px /1.2 "Roboto",sans-serif;, color:#666;}
+body::-webkit-scrollbar {display: none;}
 a:visited{color: #111;}
+a{color: #111;}
 
 /*----------------------------------------------------------*/
+
+#scroll_controll{position: fixed;}
+#scroll_ball{width: 15px; height: 15px; background: red; border-radius: 7.5px; position: fixed;top: 50vh; left: 5vh; z-index: 1000; box-shadow: 5px 5px 5px rgba(0,0,0,0.5);}
 
 /*---------layout-------------*/
 #header{height: 10vh;display: flex; top: 3vh;margin-left: 5vw; position: fixed; width: 90vw; /*background-color: bisque;*/  justify-content: space-between;}
@@ -23,7 +28,7 @@ a:visited{color: #111;}
 #menu li a{font-size: 0.8rem; font-weight:300; }
 
 
-#nav{/*background-color: aqua; */overflow: hidden; position: fixed; width: 90vw; top: 13vh; border-bottom: 0.5px dotted gray; left: 5vw; padding-bottom: 2vh;}
+#nav{/*background-color: aqua; */overflow: hidden; position: fixed; width: 90vw; top: 13vh; border-bottom: 0.5px solid #e0e0e0; left: 5vw; padding-bottom: 2vh;}
 #nav ul{ display: flex; justify-content: space-between; font-size: 0.9rem; font-weight: 500;}
 #nav ul li a:hover{color:red;}
 
@@ -33,11 +38,14 @@ a:visited{color: #111;}
 
 #slider {position:relative; height: 60vh; top: 24vh; display: flex; margin-left: 5vw; }
 #slider li a.subtitle{position: relative; top: 5vh; display: block; font-size: 0.9rem;font-weight: 300; width: 100%;}
-h3{ display: inline-block; font-size: 0.9rem; font-weight: 500; float: left;}
-h3>p{display: inline-block;}
-.item{height: 50vh; margin-right: 1.2vw;
+#slider li a:nth-child(2) h3{ display: inline-block; font-size: 0.9rem; font-weight: 500; float: left;position: relative; padding-right: 20px;  }
+#slider li a:nth-child(2) h3::after{content: ""; display: block; width: 10px; height: 2px; background: gray;    position: absolute; right: 0px; bottom: 7px;
+}
+#slider li a:nth-child(2) p{display: inline-block; margin-left: 10px;}
+.item{height: 50vh; margin-right: 1.2vw; transition: all 0.5s;
 /*    margin-right: 0.5vw;*/
 }
+.item:hover{box-shadow: 5px 5px 5px rgba(0,0,0,0.2);}
 /*----------------------------------------------------------------------------------------*/
 
 
@@ -65,6 +73,7 @@ background-image: url(image/nav_2.png);}
 
 @media screen and (max-width: 768px) {
    
+    #scroll_ball{display: none;}
     body{
     overflow-x: hidden;
     overflow-y: visible;        
@@ -143,7 +152,7 @@ background-image: url(image/nav_2.png);}
     
     
     
-    #nav ul li a{display: block;margin-left: 4vw;height: 4vh;line-height: 4vh;color: #fff;font-size: 0.7rem;font-weight: 400;}
+    #nav ul li a{display: block;margin-left: 4vw;height: 8vh;line-height: 8vh;color: #fff;font-size: 0.8rem;font-weight: 600;}
     #nav ul li:hover{background:rgba(0,0, 0, 0.8); color: #fff;}
     
     
